--- a/style.css
+++ b/style.css
@@ -1,28 +1,32 @@
 /* Global variables */
 :root {
     --body: rgb(7, 7, 41);
-    --light-blue: rgb(125, 125, 221);	
+    --light-blue: rgb(125, 125, 221);
     --purple: rgb(179, 69, 179);
     --blue: rgb(18, 18, 80);
     --white: #ece6e6;
 }
+
 /* Adjustments to the whole web */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 /* Fonts and Background of the main-body */
 body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--body);
 }
+
 /* Contents and the whole stuffs */
 body main {
     position: absolute;
     top: 10vh;
     z-index: 1;
 }
+
 /* Start Header(main) */
 body header #hfx {
     position: fixed;
@@ -34,6 +38,7 @@ body header #hfx {
     flex-wrap: wrap;
     background-color: var(--white);
 }
+
 /* Start Header-Top */
 body header #hfx #htp {
     align-self: flex-end;
@@ -42,12 +47,14 @@ body header #hfx #htp {
     background-color: var(--body);
     border-bottom: var(--light-blue) .3vh solid;
 }
+
 /* Header-Top and right Heading's Raushan's Portfolio */
 body header #hfx #htp #rhf #rhng #right {
     position: relative;
     float: right;
     color: var(--white);
 }
+
 /* End Header-Top */
 /* Start Header-Down */
 body header #hfx #hdwn {
@@ -57,10 +64,12 @@ body header #hfx #hdwn {
     background-color: var(--white);
     border-bottom: var(--light-blue) .5vh solid;
 }
+
 /* Header-Down when hovered */
 body header #hfx #hdwn:hover {
     background-color: darkorange;
 }
+
 /* Header-Down unordered list of direct-cnct */
 body header #hfx #hdwn #lhf #lhng #left ul {
     position: absolute;
@@ -82,14 +91,16 @@ body header #hfx #hdwn #lhf #lhng #left #mbar {
     left: 0;
     top: 2.5vh;
 }
+
 /* Header-Down Ham-Burger Bars-container(4 Bars) */
 body header #hfx #hdwn #lhf #lhng #left #mbar .mbar {
-display: block;
-width: 4vw;
+    display: block;
+    width: 4vw;
     height: 4vh;
     cursor: pointer;
     position: relative;
 }
+
 /* Header-Down Bar of the Ham-Burger */
 body header #hfx #hdwn #lhf #lhng #left #mbar .mbar .bar {
     display: block;
@@ -99,26 +110,31 @@ body header #hfx #hdwn #lhf #lhng #left #mbar .mbar .bar {
     margin: .5vh auto;
     transition: all 0.3s ease-in-out;
 }
+
 /* JavaScript Ham-Burger animation */
 /* Header-Down Ham-Burger bars animation/visualization after clicking on Ham-Burger container */
 body header #hfx #hdwn #lhf #lhng #left #mbar .mbar.mbtn .bar:nth-child(2),
 body header #hfx #hdwn #lhf #lhng #left #mbar .mbar.mbtn .bar:nth-child(3) {
     opacity: 0;
 }
+
 /* Header-Down Right-Down transition bar */
 body header #hfx #hdwn #lhf #lhng #left #mbar .mbar.mbtn .bar:first-child {
     transform: translateY(8px) rotate(135deg);
 }
+
 /* Header-Down Left-Up transition bar */
 body header #hfx #hdwn #lhf #lhng #left #mbar .mbar.mbtn .bar:last-child {
     transform: translateY(-8px) rotate(45deg);
 }
+
 /* End JavaScript Ham-Burger animation */
 /* Header-Down list container */
 body header #hfx #hdwn #lhf #lhng #left ul li a {
     font-weight: 750;
     text-decoration: none;
 }
+
 /* Header-Down Start list element */
 body header #hfx #hdwn #lhf #lhng #left ul li a #igm {
     color: rgb(255, 0, 212);
@@ -138,33 +154,18 @@ body header #hfx #hdwn #lhf #lhng #left ul li a #cnct {
     font-size: 65%;
     position: relative;
 }
+
 /* Header-Down End list element */
-/* Header-Down Start list element hovered */
-body header #hfx #hdwn #lhf #lhng #left ul li a #igm:hover {
-    color: aliceblue
-}
-/* Header-Down Start icon list hovered */
-body header #hfx #hdwn #lhf #lhng #left ul li a #igm i:hover {
-    color: aliceblue
-}
-
-body header #hfx #hdwn #lhf #lhng #left ul li a #git:hover {
-    color: aliceblue
-}
-
-body header #hfx #hdwn #lhf #lhng #left ul li a #git i:hover {
-    color: aliceblue
-}
-
-body header #hfx #hdwn #lhf #lhng #left ul li a #cnct:hover {
-    color: aliceblue
-}
-
+/* Header-Down Start list element and icon hovered */
+body header #hfx #hdwn #lhf #lhng #left ul li a #igm:hover,
+body header #hfx #hdwn #lhf #lhng #left ul li a #igm i:hover,
+body header #hfx #hdwn #lhf #lhng #left ul li a #git:hover,
+body header #hfx #hdwn #lhf #lhng #left ul li a #git i:hover,
+body header #hfx #hdwn #lhf #lhng #left ul li a #cnct:hover,
 body header #hfx #hdwn #lhf #lhng #left ul li a #cnct i:hover {
     color: aliceblue
 }
-/* Header-Down End icon list element hovered */
-/* Header-Down End list element hovered */
+/* Header-Down End list element and icon hovered */
 /* Header-Down Start icon size and color of the list element hovered */
 body header #hfx #hdwn #lhf #lhng #left ul li a #igm i {
     font-size: 120%;
@@ -180,6 +181,7 @@ body header #hfx #hdwn #lhf #lhng #left ul li a #cnct i {
     font-size: 120%;
     color: rgb(255, 6, 6);
 }
+
 /* Header-Down End icon of the list element hovered */
 /* End Header */
 /* Start main(main-content) */
@@ -206,27 +208,21 @@ body main #msec #sec4 {
 body main #msec #sec5 {
     display: grid;
 }
+
 /* End main(main-content) */
 @media screen and (max-width: 800px) {
-
-    body header #hfx #hdwn {
-        align-self: flex-start;
-        display: flex;
-        align-items: center;
+    body {
+        font-size: 2vh;
     }
-
-}
-
-@media screen and (max-width: 400px) {
-    body header #hfx #hdwn #lhf #lhng #left ul li a #igm {
-        font-size: 50%;
+    
+    /* Contents and the whole stuffs */
+    body main {
+        font-size: 1.5vh;
     }
-
-    body header #hfx #hdwn #lhf #lhng #left ul li a #git {
-        font-size: 50%;
+    body header #hfx #hdwn #lhf #lhng #left #mbar .mbar {
+        width: 7vw;
     }
-
-    body header #hfx #hdwn #lhf #lhng #left ul li a #cnct {
-        font-size: 50%;
+    body header #hfx #hdwn #lhf #lhng #left #mbar .mbar .bar {
+        width: 7vw;
     }
 }
