--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body main {
     position: absolute;
     top: 10vh;
     z-index: 1;
+    padding: 1vh 2vw;
 }
 
 /* Start Header(main) */
@@ -165,6 +166,7 @@ body header #hfx #hdwn #lhf #lhng #left ul li a #cnct:hover,
 body header #hfx #hdwn #lhf #lhng #left ul li a #cnct i:hover {
     color: aliceblue
 }
+
 /* Header-Down End list element and icon hovered */
 /* Header-Down Start icon size and color of the list element hovered */
 body header #hfx #hdwn #lhf #lhng #left ul li a #igm i {
@@ -193,6 +195,10 @@ body main #msec #sec1 {
     display: grid;
 }
 
+body main #msec #sec1 #show-case-flex {
+    list-style: none;
+}
+
 body main #msec #sec2 {
     display: grid;
 }
@@ -214,14 +220,16 @@ body main #msec #sec5 {
     body {
         font-size: 2vh;
     }
-    
+
     /* Contents and the whole stuffs */
     body main {
         font-size: 1.5vh;
     }
+
     body header #hfx #hdwn #lhf #lhng #left #mbar .mbar {
         width: 7vw;
     }
+
     body header #hfx #hdwn #lhf #lhng #left #mbar .mbar .bar {
         width: 7vw;
     }
