--- a/style.css
+++ b/style.css
@@ -131,9 +131,10 @@ body header #hfx #hdwn #lhf #lhng #left #mbar .mbar.mbtn .bar:last-child {
 
 /* End JavaScript Ham-Burger animation */
 /* Header-Down list container */
-body header #hfx #hdwn #lhf #lhng #left ul li{
+body header #hfx #hdwn #lhf #lhng #left ul li {
     padding: 1vh 0;
 }
+
 body header #hfx #hdwn #lhf #lhng #left ul li a {
     font-weight: 750;
     text-decoration: none;
@@ -219,14 +220,32 @@ body main #msec #sec5 {
 }
 
 /* End main(main-content) */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 500px) {
+
+    body header #hfx #hdwn #lhf #lhng #left ul li {
+        padding: 2vh 0;
+        font-size: 3vw;
+    }
+
+    body header #hfx #hdwn #lhf #lhng #left #mbar .mbar {
+        width: 10vw;
+    }
+
+    body header #hfx #hdwn #lhf #lhng #left #mbar .mbar .bar {
+        width: 10vw;
+    }
+}
+
+
+
+@media screen and (min-width: 501px) {
     body {
-        font-size: 2vh;
+        font-size: 4vh;
     }
 
     /* Contents and the whole stuffs */
     body main {
-        font-size: 1.5vh;
+        font-size: 3.5vh;
     }
 
     body header #hfx #hdwn #lhf #lhng #left #mbar .mbar {
@@ -234,6 +253,17 @@ body main #msec #sec5 {
     }
 
     body header #hfx #hdwn #lhf #lhng #left #mbar .mbar .bar {
-        width: 7vw;
+        width: 5vw;
+    }
+}
+
+@media screen and (min-height: 800px) {
+    body {
+        font-size: 2vh;
+    }
+
+    /* Contents and the whole stuffs */
+    body main {
+        font-size: 1.5vh;
     }
 }
