--- a/style.css
+++ b/style.css
@@ -29,10 +29,25 @@ body header {
 /* End the dimensions of header */
 /* Contents and the whole stuffs */
 body main {
+    height: 100vh;
+    width: 100vw;
     position: absolute;
     z-index: 100;
     padding: 0vh 4vw;
     font-size: 1.5vw;
+}
+
+body main .gridSection {
+    display: grid;
+    grid-template-rows: 30vh 70vh;
+}
+
+#gridItem-main-navbar {
+    grid-row: 1;
+}
+
+#gridItem-main-contents {
+    grid-row: 2;
 }
 
 /* Start Header(main) */
@@ -197,20 +212,44 @@ body header #hfx #hdwn #lhf #lhng #left ul li a #cnct i {
 /* Header-Down End icon of the list element hovered */
 /* End Header */
 /* Start main(main-content) */
+body main .navBar .navBar-menu .navBar-full #text {
+    font-size: 5vw;
+    background-image: url("bby.png");
+    width: 100vw;
+    height: 10vh;
+    background-repeat: no-repeat;
+    /* Don't repeat the image */
+    background-size: cover;
+    /* Resize image to cover the entire element */
+    background-position: bottom;
+}
+
+body {
+
+    background-image: url("bgl.png");
+    width: 100vw;
+    height: 100vh;
+    background-repeat: no-repeat;
+    /* Don't repeat the image */
+    background-size: cover;
+    /* Resize image to cover the entire element */
+    background-position: bottom;
+    /* Center the image horizontally and vertically */
+}
+
 body main .navBar,
 body main .navBar .navBar-menu,
 body main .navBar .navBar-menu .navBar-full {
     position: absolute;
-    left: -100vw;
+    left: -99.5vw;
     /* z-index: 100; */
-    width: 92vw;
+    width: 90.6vw;
     height: 15vw;
 
 }
 
 /* Start smooth Transition and Transformation of navBar */
 .navBar.navToggle {
-    /* display: block; */
     position: absolute;
     left: 103vw;
     transform: translateX(100vw);
@@ -224,7 +263,6 @@ body main .navBar .navBar-menu .navBar-full {
 /* Start Shifting main-contents to the bottom of navbar */
 body main .main-content.main-content-toggle {
     position: relative;
-    top: 30vh;
 }
 
 /* End Shifting main-contents to the bottom of navbar */
@@ -235,7 +273,7 @@ body main .navBar .navBar-menu .navBar-full {
     font-weight: 700;
     justify-content: space-around;
     color: var(--body);
-    background-color: var(--white);
+    background-color: rgb(34, 228, 154);
 }
 
 /* End NavBar menus */
@@ -246,7 +284,7 @@ body main .navBar .navBar-menu .navBar-full #navSection-2,
 body main .navBar .navBar-menu .navBar-full #navSection-3,
 body main .navBar .navBar-menu .navBar-full #navSection-4 {
     display: flex;
-    width: 18%;
+    width: 20%;
     justify-content: space-between;
 }
 
@@ -267,9 +305,7 @@ body main .navBar .navBar-menu .navBar-full #navSection-1 #menu-1 #Programming-l
 /* End main(main-content) */
 
 @media screen and (min-width:800px) and (min-height: 1200px) {
-    body main .main-content.main-content-toggle {
-        top: 10vh;
-    }
+    body main .main-content.main-content-toggle {}
 }
 
 @media screen and (min-width:801px) and (max-height: 800px) {
@@ -292,27 +328,23 @@ body main .navBar .navBar-menu .navBar-full #navSection-1 #menu-1 #Programming-l
         width: 4vw;
     }
 
-    body main .main-content.main-content-toggle {
-        top: 25vh;
-    }
+    body main .main-content.main-content-toggle {}
 }
 
 @media screen and (max-width:800px) and (max-height: 801px) {
-    body main .main-content.main-content-toggle {
-        top: 9vh;
+    body main .main-content.main-content-toggle {}
+
+    body main .gridSection {
+        grid-template-rows: 11vh 89vh;
     }
 }
 
 @media screen and (min-width:1200px) and (min-height: 900px) {
-    body main .main-content.main-content-toggle {
-        top: 25vh;
-    }
+    body main .main-content.main-content-toggle {}
 }
 
 @media screen and (min-width:1200px) and (min-height: 950px) {
-    body main .main-content.main-content-toggle {
-        top: 20vh;
-    }
+    body main .main-content.main-content-toggle {}
 }
 
 @media screen and (max-width:799px) and (min-height: 801px) {
@@ -352,7 +384,9 @@ body main .navBar .navBar-menu .navBar-full #navSection-1 #menu-1 #Programming-l
         transform: translateY(0vh) rotate(135deg);
     }
 
-    body main .main-content.main-content-toggle {
-        top: 7vh;
+    body main .main-content.main-content-toggle {}
+
+    body main .gridSection {
+        grid-template-rows: 11vh 89vh;
     }
 }
